added pdf generation code and yaml support.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-configuration=B://STSWorkSpace//SQSWebService//src//main//resources//config.json
-fileReader= jsonReader
+configuration=B:/STSWorkSpace/SQSWebService/src/main/resources/config.yaml
+fileReader=jsonReader
+resourcePath=B:/STSWorkSpace/SQSWebService/src/main/resources/
